modals insert e update

--- a/client/src/components/InsertModal/style.css
+++ b/client/src/components/InsertModal/style.css
@@ -7,7 +7,7 @@ input {
   position: fixed;
   top: 15vh;
   left: 70vh;
-  height: 70%;
+  height: 65%;
   width: 30%;
   padding: 20px;
   border-radius: 8px;
@@ -34,9 +34,10 @@ input {
 }
 
 .type-selection {
-  margin-bottom: 10px;
+  margin: 0 auto 10px;
+  width: 65%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .value-date {
@@ -46,4 +47,8 @@ input {
 
 .value-date #value, #date {
   width: 160px;
+}
+
+#save {
+  margin-top: 15px;
 }
